# DXRust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.bat  notes.txt  shaders.py
.cargo/: config
crates/asset/: Cargo.toml
crates/asset/src/: gltf.rs  lib.rs  main.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  mat.rs  quat.rs  vec.rs
crates/scene/: Cargo.toml
crates/scene/src/: camera.rs  lib.rs
shaders/: clear.cs.hlsl  defines.hlsl  imgui.common.hlsl  imgui.ps.hlsl  imgui.root  imgui.vs.hlsl  mesh.common.hlsl  mesh.ps.hlsl  mesh.root  mesh.vs.hlsl  postprocess.cs.hlsl  principled_brdf.hlsl  random.hlsl  ray.lib.hlsl  types.hlsl  utils.hlsl
src/: allocator.rs  asset.rs  d3d12.rs  gltf.rs  imgui_impl.rs  main.rs  mesh.rs  render.rs  scene.rs  shaders.rs  win32.rs
