[package]
name = "math"
version = "0.1.0"
authors = ["ramenguy99 <ramenguy99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.0", features = ["derive"] }

[profile.release]
debug = true

# [features]
# default = ["depth_zero_one", "right_handed"]
#
# depth_negative_one_one = []
# depth_zero_one = []
#
# right_handed = []
# left_handed = []
